# InTaVia-Backend

./: .buildpacks  .flake8  .gitignore  .gitmodules  .isort.cfg  Aptfile  CHANGELOG.md  Dockerfile  README.md  conversion.py  dump.rdb  fastapi_versioning  main.py  main_original.py  models.py  pyproject.toml  query_parameters.py  rdf_fastapi_utils  requirements.txt  start.sh
.devcontainer/: Dockerfile  devcontainer.json  development-standalone.env  docker-compose-standalone.yml  docker-compose.yml
.github/workflow/: starter.yaml
.github/workflows/: build.yml  build.yml.bak  build_and_deploy.yml  build_and_deploy.yml.bak  release.yml  starter.yaml  starter.yaml.bak
intavia_backend/: apisdata_05-07-2022.ttl  apisdata_05-07-2022_edited_test.ttl  apisdata_07-07-2022_0-200.ttl  config.py  conversion.py  debug_5-10_22.json  debug_5-10_22_v2.json  debug_5-10_22_v3.json  debug_5-10_22_v4.json  debug_5-10_22_v5.json  debug_5-10_22_v6.json  intavia_cache.py  main.py  main_v1.py  main_v2.py  models.py  models_test.py  models_v1.py  models_v2.py  queries.yml  query_parameters.py  query_parameters_v2.py  testquery.rq  utils.py
sparql/: entity_type_bindings_v1.sparql  get_entity_v1.sparql  occupation_v1.sparql  person_v1.sparql  query_entities_v1.sparql  recon_crm_v1.sparql  recon_provided_person_v1.sparql  recon_reconcile_v1.sparql  recon_suggest_v1.sparql  recon_suggest_v1_original.sparql  retrieve_entities_v1.sparql  retrieve_entities_v2.sparql  search_uris_v1.sparql  search_v1.sparql  search_v2.sparql  search_v3.sparql  statistics_birthdate_v1.sparql  statistics_deathdate_v1.sparql  statistics_occupation_v1.sparql
(+45 files in other folders)
