[tool.poetry]
name = "intavia-backend"
version = "0.1.0"
description = ""
authors = ["Matthias Schlögl <matthias.schloegl@oeaw.ac.at>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
rdflib = "^6.1.1"
pydantic = "^1.9.1"
SPARQLWrapper = "^1.8.5"
geojson-pydantic = "^0.4.0"
Jinja2 = "^3.1.2"
pymemcache = "^3.5.2"
SPARQLTransformer = "^2.2.0"
sentry-sdk = "^1.6.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
