[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.poetry]
name = "intavia-backend"
version = "0.2.18"
description = ""
authors = ["Matthias Schlögl <matthias.schloegl@oeaw.ac.at>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
uvicorn = "^0.17.6"
rdflib = "^6.1.1"
pydantic = ">=1.10.2"
SPARQLWrapper = "^1.8.5"
geojson-pydantic = "^0.4.0"
Jinja2 = "^3.1.2"
pymemcache = "^3.5.2"
SPARQLTransformer = "^2.2.0"
sentry-sdk = "^1.6.0"
python-dateutil = "^2.8.2"
gunicorn = "^20.1.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.1.9"}
aioredis = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
